[package]
name = "libhtmlfilter"
edition = "2021"
version = "0.1.2"
authors = ["Cysnies <official@tcea.top>", "FOSScope Contributors <fosscope@fosscope.org>"]
license = "MIT"
description = "A tool to filter html by tags and classes"
readme = "README.md"
homepage = "https://github.com/fosscope/libhtmlfilter"
repository = "https://github.com/fosscope/libhtmlfilter"
keywords = ["html", "filter", "lib"]

[dependencies]
reqwest = { version = "0.12.5" }
kuchiki = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
